# oneDNN_Profiling

./: .gitignore  CMakeLists.txt  Makefile  README.md  profiling_batchmm.cpp  profiling_conv.cpp  profiling_eltwiserelu.cpp  profiling_inner_product.cpp  profiling_matmul.cpp  profiling_matsum.cpp  profiling_naive.cpp  profiling_softmax.cpp  profiling_sum.cpp
input/: 2048x2048_relu.in  2048x2048_softmax.in  default.in  matmul.in  matmul_2.in  matsum.in  relu.in  softmax.in  softmax_2.in
